Move some files after the repo merge

--- a/config.toml
+++ b/config.toml
@@ -5,6 +5,7 @@ theme = "massively"
 
 [params]
     custom_css = ["css/overrides.css"]
+    favicon = "images/favicon.ico"
 
 [params.posts]
     foldername = "post"
