--- a/data/en/contactinfo.yaml
+++ b/data/en/contactinfo.yaml
@@ -1,10 +1,11 @@
-# contactformaction: 'https://formspree.io/ajwilly19@gmail.com'
-contactformaction: 'https://formspree.io/smirlie@gmail.com'
+contactformaction: 'https://formspree.io/ajwilly19@gmail.com'
 
 address:
-- line: '1234 Somewhere Road #87257'
-- line: 'Nashville, TN 00000-0000'
+- line: 'Unit 5, Wharton Street Industrial Estate'
+- line: 'Wharton Street'
+- line: 'Birmingham'
+- line: 'B7 5TR'
 
-phone: '+44 7919 411211'
+phone: '0121 326 0922'
 
 email: 'ajwilly19@gmail.com'
