--- a/data/en/intro.yml
+++ b/data/en/intro.yml
@@ -1,5 +1,5 @@
 title:
-- line: "Alcina Engineering"
+- line: "Alcina Engineering Ltd"
 
 description:
 - line: "Welded Fabrications, Press Work, CNC Wire Erosion"
