--- a/deploy/values.yaml
+++ b/deploy/values.yaml
@@ -40,10 +40,10 @@ ingress:
     cert-manager.io/cluster-issuer: letsencrypt-prod
     kubernetes.io/ingress.class: nginx
   hosts:
-    - alcinaengineering.com
-    - www.alcinaengineering.com
+    - alcinaengineering.co.uk
+    - www.alcinaengineering.co.uk
   tls:
     - hosts:
-        - alcinaengineering.com
-        - www.alcinaengineering.com
+        - alcinaengineering.co.uk
+        - www.alcinaengineering.co.uk
       secretName: alcina-tls
