Upgrade to Google Analytics 4

--- a/config.toml
+++ b/config.toml
@@ -2,7 +2,7 @@ baseURL = "https://alcinaengineering.co.uk/"
 languageCode = "en-gb"
 title = "Alcina Engineering Limited"
 theme = "massively"
-googleanalytics = "UA-5357036-9"
+googleanalytics = "G-KWYMEB8RWZ"
 
 [params]
     custom_css = ["/css/overrides.css"]
